@@ -11,13 +11,13 @@ dnl Initialise automake
 
 SKSTREAM_MAJOR=0
 SKSTREAM_MINOR=3
-SKSTREAM_MICRO=2
+SKSTREAM_MICRO=3
 SKSTREAM_VERSION=$SKSTREAM_MAJOR.$SKSTREAM_MINOR.$SKSTREAM_MICRO
 
 AM_INIT_AUTOMAKE(skstream, $SKSTREAM_VERSION)
 AM_CONFIG_HEADER(config.h)
 
-SKSTREAM_CURRENT=0
+SKSTREAM_CURRENT=1
 SKSTREAM_REVISION=0
 SKSTREAM_AGE=0
 SKSTREAM_VERSION_INFO=$SKSTREAM_CURRENT:$SKSTREAM_REVISION:$SKSTREAM_AGE
